# harness

./: .gitignore  AGENTS.md  AGENT_README.md  ARCHITECTURE.md  CHANGELOG.md  COMMAND_EXAMPLES.md  CONTRACTS.md  Cargo.toml  ERROR_CATALOG.json  Makefile  ONBOARDING.md  PLAN.md  README.md  REPO_MAP.json  SKILLS.md  TASK_TEMPLATES.md  TEST_MATRIX.md  TEST_STRATEGY.md
.github/workflows/: ci.yml  release-binaries.yml
docs/: CLI_SIMULATION.md  CODE_STRUCTURE.md  INSTALLATION.md
docs/plans/: 2026-02-27-gap-resolution-design.md  2026-02-27-v1-implementation.md  README.md
scripts/: install.sh  simulate_cli_use_cases.sh
src/: cli.rs  config.rs  continuity.rs  error.rs  main.rs
src/analyze/: context.rs  continuity.rs  lint.rs  mod.rs  quality.rs  tools.rs  verification.rs
src/generator/: manifest.rs  mod.rs  templates.rs  writer.rs
src/guardrails/: command_policy.rs  loop_guard.rs  mod.rs
src/optimization/: mod.rs  presets.rs  recommender.rs  rules.rs  scoring.rs
src/report/: json.rs  md.rs  mod.rs  sarif.rs
src/scan/: docs.rs  filesystem.rs  git_meta.rs  mod.rs  tools.rs
src/trace/: aggregation.rs  mod.rs  parser.rs
src/types/: config.rs  mod.rs  report.rs  scoring.rs
tests/: cli_atdd.rs  integration.rs
