[package]
name = "harness"
version = "0.1.0"
description = "Rust CLI for harness analysis and optimization of AI agent workflows"
authors = ["mudrii"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1"

[dev-dependencies]
# kept minimal for v0.1 bootstrap
